--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -326,7 +326,7 @@
               نقدم جميع خدمات التأهيل والتطوير والتقييم وقياس الأثر ومساعدة المؤسسات للحصول على المنح لجميع شهادات الأيزو الدولية بالتنسيق مع الجهات الدولية المعتمدة لمنح جميع شهادات الأيزو والجوائز الوطنية والعالمية</h2>
         </div>
         <div class="row g-4">
-            <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.1s">
+            <div class="col-lg-4 col-md-6 wow zoomIn" data-aos="zoom-in" data-aos-delay="100">
                 <div class="service-item d-flex flex-column justify-content-center text-center rounded">
                     <div class="service-icon flex-shrink-0">
                         <i class="fa fa-home fa-2x"></i>
@@ -337,18 +337,18 @@
                     <a class="btn px-3 mt-auto mx-auto" href="">اقرا اكثر</a>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
+            <div class="col-lg-4 col-md-6 wow zoomIn" data-aos="zoom-in" data-aos-delay="200">
                 <div class="service-item d-flex flex-column justify-content-center text-center rounded">
                     <div class="service-icon flex-shrink-0">
                         <i class="fa fa-home fa-2x"></i>
                     </div>
                     <h5 class="mb-3">نظام أمن وسرية المعلومات
-                      .</h5>
+                      </h5>
                       <p>ISO27001</p>
                     <a class="btn px-3 mt-auto mx-auto" href="">اقرا اكثر</a>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
+            <div class="col-lg-4 col-md-6 wow zoomIn" data-aos="zoom-in" data-aos-delay="300">
                 <div class="service-item d-flex flex-column justify-content-center text-center rounded">
                     <div class="service-icon flex-shrink-0">
                         <i class="fa fa-home fa-2x"></i>
@@ -359,7 +359,7 @@
                     <a class="btn px-3 mt-auto mx-auto" href="">اقرا اكثر</a>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.1s">
+            <div class="col-lg-4 col-md-6 wow zoomIn" data-aos="zoom-in" data-aos-delay="400">
                 <div class="service-item d-flex flex-column justify-content-center text-center rounded">
                     <div class="service-icon flex-shrink-0">
                         <i class="fa fa-home fa-2x"></i>
@@ -370,63 +370,63 @@
                     <a class="btn px-3 mt-auto mx-auto" href="">اقرا اكثر</a>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
-                <div class="service-item d-flex flex-column justify-content-center text-center rounded">
-                    <div class="service-icon flex-shrink-0">
-                        <i class="fa fa-home fa-2x"></i>
-                    </div>
-                    <h5 class="mb-3">سياسات أنظمة إدارة المعامل الطبية
-                      </h5>
-                      <p>ISO 15189</p>
-                    <a class="btn px-3 mt-auto mx-auto" href="">اقرا اكثر</a>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
-                <div class="service-item d-flex flex-column justify-content-center text-center rounded">
-                    <div class="service-icon flex-shrink-0">
-                        <i class="fa fa-home fa-2x"></i>
-                    </div>
-                    <h5 class="mb-3">الحوكمة المؤسسية لتقنية المعلومات
-                      </h5>
-                      <p>ISO38500</p>
-                    <a class="btn px-3 mt-auto mx-auto" href="">اقرا اكثر</a>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
+            <div class="col-lg-4 col-md-6 wow zoomIn" data-aos="zoom-in" data-aos-delay="500">
               <div class="service-item d-flex flex-column justify-content-center text-center rounded">
                   <div class="service-icon flex-shrink-0">
                       <i class="fa fa-home fa-2x"></i>
                   </div>
-                  <h5 class="mb-3">السلامة والصحة المهنية
-                     
+                  <h5 class="mb-3">سياسات أنظمة إدارة المعامل الطبية
                     </h5>
-                    <p>ISO 45001</p>
+                    <p>ISO 15189</p>
                   <a class="btn px-3 mt-auto mx-auto" href="">اقرا اكثر</a>
               </div>
           </div>
-          <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
+          <div class="col-lg-4 col-md-6 wow zoomIn" data-aos="zoom-in" data-aos-delay="600">
+              <div class="service-item d-flex flex-column justify-content-center text-center rounded">
+                  <div class="service-icon flex-shrink-0">
+                      <i class="fa fa-home fa-2x"></i>
+                  </div>
+                  <h5 class="mb-3">الحوكمة المؤسسية لتقنية المعلومات
+                    </h5>
+                    <p>ISO38500</p>
+                  <a class="btn px-3 mt-auto mx-auto" href="">اقرا اكثر</a>
+              </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow zoomIn" data-aos="zoom-in" data-aos-delay="700">
             <div class="service-item d-flex flex-column justify-content-center text-center rounded">
                 <div class="service-icon flex-shrink-0">
                     <i class="fa fa-home fa-2x"></i>
                 </div>
-                <h5 class="mb-3">لممارسة المهنية لمراكزالتدريب والتعليم
-                  
+                <h5 class="mb-3">السلامة والصحة المهنية
+                   
                   </h5>
-                  <p>ISO 29990</p>
+                  <p>ISO 45001</p>
                 <a class="btn px-3 mt-auto mx-auto" href="">اقرا اكثر</a>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
+        <div class="col-lg-4 col-md-6 wow zoomIn" data-aos="zoom-in" data-aos-delay="800" >
           <div class="service-item d-flex flex-column justify-content-center text-center rounded">
               <div class="service-icon flex-shrink-0">
                   <i class="fa fa-home fa-2x"></i>
               </div>
-              <h5 class="mb-3"> جودة عمليات التدريب وتطويرالكفاءات بالمؤسسات موجهات لإدارة الكفايات
-               
+              <h5 class="mb-3">لممارسة المهنية لمراكزالتدريب والتعليم
+                
                 </h5>
-                <p> المهارات) وتطويرالأفراد بالمؤسسات الاحتياجات التدريبية تصميم وتخطيط التدريب ( (ISO 1001</p>
+                <p>ISO 29990</p>
               <a class="btn px-3 mt-auto mx-auto" href="">اقرا اكثر</a>
           </div>
+      </div>
+      <div class="col-lg-4 col-md-6 wow zoomIn" data-aos="zoom-in" data-aos-delay="900">
+        <div class="service-item d-flex flex-column justify-content-center text-center rounded">
+            <div class="service-icon flex-shrink-0">
+                <i class="fa fa-home fa-2x"></i>
+            </div>
+            <h5 class="mb-3"> جودة عمليات التدريب وتطويرالكفاءات بالمؤسسات موجهات لإدارة الكفايات
+             
+              </h5>
+              <p> المهارات) وتطويرالأفراد بالمؤسسات الاحتياجات التدريبية تصميم وتخطيط التدريب ( (ISO 1001</p>
+            <a class="btn px-3 mt-auto mx-auto" href="">اقرا اكثر</a>
+        </div>
       </div>
         </div>
     </div>
@@ -607,22 +607,22 @@
             </div>
           </li>
           <li data-aos="fade-up" data-aos-delay="500">
-            <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed" style="font-size: 1.5rem;">الاستثمارالاجتماعي للمؤسسات وفق قياس العائد الاستثماري " المسؤولية الاجتماعية  <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-            <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
+            <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-6" class="collapsed" style="font-size: 1.5rem;">الاستثمارالاجتماعي للمؤسسات وفق قياس العائد الاستثماري " المسؤولية الاجتماعية  <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+            <div id="faq-list-6" class="collapse" data-bs-parent=".faq-list">
               <p>
               </p>
             </div>
           </li>
           <li data-aos="fade-up" data-aos-delay="500">
-            <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed" style="font-size: 1.5rem;" > الاستدامة المالية والتشبيك مع المنصات والجهات الداعمة <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-            <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
+            <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-7" class="collapsed" style="font-size: 1.5rem;" > الاستدامة المالية والتشبيك مع المنصات والجهات الداعمة <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+            <div id="faq-list-7" class="collapse" data-bs-parent=".faq-list">
               <p>
               </p>
             </div>
           </li>
           <li data-aos="fade-up" data-aos-delay="500">
-            <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed" style="font-size: 1.5rem;">قياس أثر البرامج للشركات والجمعيات وقياس مدى التأثير المستقبلي والقيمة السوقية <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-            <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
+            <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-8" class="collapsed" style="font-size: 1.5rem;">قياس أثر البرامج للشركات والجمعيات وقياس مدى التأثير المستقبلي والقيمة السوقية <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+            <div id="faq-list-8" class="collapse" data-bs-parent=".faq-list">
               <p>
               </p>
             </div>
@@ -858,8 +858,8 @@
       <div class="row" >
 
         <div class="col-lg-3 col-md-6 footer-contact" >
-          <h3 style=" color: white; font-size: 1.5rem;">الجودة</h3>
-          <p style=" color: white; font-size: 1.5rem;">
+          <h3 style=" color: white; font-size: 1.2rem;">الجودة</h3>
+          <p style=" color: white; font-size: 1.2rem;">
             الدمام  6361    <br>
             حى المزروعية<br>
              طريق الملك فيصل<br><br>
@@ -868,12 +868,12 @@
           </p>
         </div>
 
-        <div class="col-lg-3 col-md-6 footer-links" style=" color: white; font-size: 1.5rem;">
+        <div class="col-lg-3 col-md-6 footer-links" style=" color: white; font-size: 1.2rem;">
           <h4>هنا</h4>
           <ul style=" color: white; font-size: 1.5rem;">
-            <li><i class="bx bx-chevron-right"></i> <a href="#" style=" color: white; font-size: 1.5rem;">الريئيسية</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#" style=" color: white; font-size: 1.5rem;"> نحن</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#" style=" color: white; font-size: 1.5rem;">خدماتنا</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#" style=" color: white; font-size: 1.2rem;">الرئيسية</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#" style=" color: white; font-size: 1.2rem;"> نحن</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#" style=" color: white; font-size: 1.2rem;">خدماتنا</a></li>
            
           </ul>
         </div>
