--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -108,7 +108,7 @@
 
       <div class="row">
         <div class="col-lg-9 text-center text-lg-start">
-          <h3>خدماتنا</h3>
+          <h3>خدماتناا</h3>
           <p>قطاعات والشركات والجمعيات والمصانع والمؤسسات التعليمية والمراكز المعتمدة بما يلائم تلبية احتياجاتهم وتطلعاتهم الحالية والمستقبلية مع مراعاة التكامل وضمان الجودة في كل ما نقدمه من أعمال تطويريه للمؤسسة وتقديم أفضل النتائج وفق معايير ومؤشرات معتمدة للخدمات التي تقدم من خلال شركتنا [ مسارات الجودة</p>
         </div>
         <div class="col-lg-3 cta-btn-container text-center">
